--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "projet savoir_vert",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "nodemailer": "^6.4.18"
+    "nodemailer": "^6.4.18",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
